# simple-python-app-fedora

./: Dockerfile  Makefile  README.md  pyproject.toml  renovate.json  requirements-test.txt  requirements.in  requirements.txt
.tekton/: simple-python-app-fedora-1-pull-request.yaml  simple-python-app-fedora-1-push.yaml
