[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-python-app-fedora"
requires-python = ">=3.12"
authors = [
    {name = "tkdchen"},
]
description = "Simple Python App for testing with Konflux and Renovate maybe."
readme = "README.md"
license = {text = "MIT"}
keywords = ["konflux", "ci", "renovate"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

dependencies = [
  "Django==4.2.19",
  "ruamel.yaml==0.18.10",
  "oras==0.2.28",
  "jsonschema==4.23.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "responses",
  "tox",
]

[project.urls]
Homepage = "https://github.com/cqi-stonesoup-test/simple-python-app-fedora"
Documentation = "https://github.com/cqi-stonesoup-test/simple-python-app-fedora/blob/main/README.md"
Issues = "https://github.com/cqi-stonesoup-test/simple-python-app-fedora/issues"


